Fixes Nav Spacing

--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -44,6 +44,9 @@ $secondary: #192633;
   display: flex;
   flex-direction: column;
   align-items: center;
+  h2 {
+    margin: 0;
+  }
 }
 
 .cardBody {
