--- a/styles/BigNav.module.scss
+++ b/styles/BigNav.module.scss
@@ -8,13 +8,13 @@ $secondary: #192633;
   padding: 0 20px;
   overflow-x: hidden;
   display: flex;
-  justify-content: space-between;
   align-items: center;
 }
 
 .items {
-  display: flex;
-  justify-content: flex-start;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   align-items: center;
   margin: 0;
   li {
@@ -28,7 +28,6 @@ $secondary: #192633;
 
 .items > ul {
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -53,6 +52,7 @@ $secondary: #192633;
 }
 
 .contact {
+  justify-self: flex-end;
   display: flex;
   color: $primary;
   margin: 0px 5px;
