--- a/styles/Modal.module.scss
+++ b/styles/Modal.module.scss
@@ -97,7 +97,7 @@ $dark: #131e29;
   .modalImg {
     background: none;
     justify-content: flex-start;
-    height: 130%;
+    height: 100%;
     margin-top: 50px;
   }
   .modalContent {
